// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/SettingItemMin should match snapshot 1`] = `
<ul
  className="section-max form-horizontal "
>
  <li
    className="col-sm-12 section-title"
    id="settingTitle"
  >
    title
  </li>
  <li
    className="col-sm-12"
  >
    <ul
      className="setting-list"
      role="presentation"
      tabIndex="-1"
    >
      <li
        className="setting-list-item"
        role="presentation"
      >
        input_1
      </li>
      <li
        className="setting-list-item"
      >
        <hr />
        <SaveButton
          btnClass="btn-primary"
          disabled={false}
          extraClasses=""
          onClick={[Function]}
          saving={false}
        />
        <button
          className="btn btn-sm btn-cancel cursor--pointer style--none"
          id="cancelSetting"
          onClick={[Function]}
        >
          <FormattedMessage
            defaultMessage="Cancel"
            id="setting_item_max.cancel"
            values={Object {}}
          />
        </button>
      </li>
    </ul>
  </li>
</ul>
`;

exports[`components/SettingItemMin should match snapshot, on clientError 1`] = `
<ul
  className="section-max form-horizontal "
>
  <li
    className="col-sm-12 section-title"
    id="settingTitle"
  >
    title
  </li>
  <li
    className="col-sm-12"
  >
    <ul
      className="setting-list"
      role="presentation"
      tabIndex="-1"
    >
      <li
        className="setting-list-item"
        role="presentation"
      >
        input_1
      </li>
      <li
        className="setting-list-item"
      >
        <hr />
        <div
          className="form-group"
        >
          <label
            className="col-sm-12 has-error"
            id="clientError"
          >
            clientError
          </label>
        </div>
        <SaveButton
          btnClass="btn-primary"
          disabled={false}
          extraClasses=""
          onClick={[Function]}
          saving={false}
        />
        <button
          className="btn btn-sm btn-cancel cursor--pointer style--none"
          id="cancelSetting"
          onClick={[Function]}
        >
          <FormattedMessage
            defaultMessage="Cancel"
            id="setting_item_max.cancel"
            values={Object {}}
          />
        </button>
      </li>
    </ul>
  </li>
</ul>
`;

exports[`components/SettingItemMin should match snapshot, on serverError 1`] = `
<ul
  className="section-max form-horizontal "
>
  <li
    className="col-sm-12 section-title"
    id="settingTitle"
  >
    title
  </li>
  <li
    className="col-sm-12"
  >
    <ul
      className="setting-list"
      role="presentation"
      tabIndex="-1"
    >
      <li
        className="setting-list-item"
        role="presentation"
      >
        input_1
      </li>
      <li
        className="setting-list-item"
      >
        <hr />
        <div
          className="form-group"
        >
          <label
            className="col-sm-12 has-error"
            id="serverError"
          >
            serverError
          </label>
        </div>
        <SaveButton
          btnClass="btn-primary"
          disabled={false}
          extraClasses=""
          onClick={[Function]}
          saving={false}
        />
        <button
          className="btn btn-sm btn-cancel cursor--pointer style--none"
          id="cancelSetting"
          onClick={[Function]}
        >
          <FormattedMessage
            defaultMessage="Cancel"
            id="setting_item_max.cancel"
            values={Object {}}
          />
        </button>
      </li>
    </ul>
  </li>
</ul>
`;

exports[`components/SettingItemMin should match snapshot, with new saveTextButton 1`] = `
<ul
  className="section-max form-horizontal "
>
  <li
    className="col-sm-12 section-title"
    id="settingTitle"
  >
    title
  </li>
  <li
    className="col-sm-12"
  >
    <ul
      className="setting-list"
      role="presentation"
      tabIndex="-1"
    >
      <li
        className="setting-list-item"
        role="presentation"
      >
        input_1
      </li>
      <li
        className="setting-list-item"
      >
        <hr />
        <SaveButton
          btnClass="btn-primary"
          defaultMessage="CustomText"
          disabled={false}
          extraClasses=""
          onClick={[Function]}
          saving={false}
        />
        <button
          className="btn btn-sm btn-cancel cursor--pointer style--none"
          id="cancelSetting"
          onClick={[Function]}
        >
          <FormattedMessage
            defaultMessage="Cancel"
            id="setting_item_max.cancel"
            values={Object {}}
          />
        </button>
      </li>
    </ul>
  </li>
</ul>
`;

exports[`components/SettingItemMin should match snapshot, without submit 1`] = `
<ul
  className="section-max form-horizontal "
>
  <li
    className="col-sm-12 section-title"
    id="settingTitle"
  >
    title
  </li>
  <li
    className="col-sm-12"
  >
    <ul
      className="setting-list"
      role="presentation"
      tabIndex="-1"
    >
      <li
        className="setting-list-item"
        role="presentation"
      >
        input_1
      </li>
      <li
        className="setting-list-item"
      >
        <hr />
        <button
          className="btn btn-sm btn-cancel cursor--pointer style--none"
          id="cancelSetting"
          onClick={[Function]}
        >
          <FormattedMessage
            defaultMessage="Cancel"
            id="setting_item_max.cancel"
            values={Object {}}
          />
        </button>
      </li>
    </ul>
  </li>
</ul>
`;
